correct small bug and adpat to tissue files

--- a/tissue-graph.ipynb
+++ b/tissue-graph.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Graph of SNPs in the genome\n",
-    "The idea here is to build a similarity graph between SNPs. In the raw data, there are many SNPs that are identical, only their names change (see data exploration notebook). Eliminating the duplicates, or grouping them together as a single feature, reduces the analysis time and complexity. Going one step further in that direction, it may be interesting to group together the SNPs that are highly similar as well, while still keeping them distinguishable. This is the idea developed here with a graph approach.\n",
+    "# Graph of gene expression similarity inside a tissue\n",
+    "The idea here is to build a similarity graph between gene expression.The idea is the same as for the genotype graph, see the \"genotype graph\" notebook for more info.\n",
     "\n",
-    "In this notebook, SNPs are nodes of the graph. They are connected to their k nearest neighbors. The connections are weighted by the similarity of the SNPs according to a chosen distance. To each SNP is associated a vector encoding its variations over the BXD mouse dataset. Two SNPs are similar if their vectors are close in term of Euclidean distance."
+    "In this notebook, proteins or gene expression are nodes of the graph. They are connected to their k nearest neighbors. The connections are weighted by the similarity between two protein expression according to a chosen distance. To each protein is associated a vector encoding its variations over the BXD mouse dataset. Two proteins are similar if their vectors are close in term of Euclidean distance."
    ]
   },
   {
@@ -59,10 +59,17 @@
    "outputs": [],
    "source": [
     "# Load the data\n",
-    "genotype_path = os.path.join(s3_path, 'geno_reduced.csv.gz')\n",
-    "#genotype_path = os.path.join(s3_path, 'genotype_BXD.csv.gz')\n",
-    "genotype = pd.read_csv(genotype_path, storage_options=storage_options)\n",
-    "print('File {} Opened.'.format(genotype_path))"
+    "# Tissue\n",
+    "tissue_name = 'LiverProt_CD'\n",
+    "# Other examples:\n",
+    "#tissue_name = 'Eye'\n",
+    "#tissue_name = 'Muscle_CD'\n",
+    "#tissue_name = 'Hippocampus'\n",
+    "#tissue_name = 'Gastrointestinal'\n",
+    "#tissue_name = 'Lung'\n",
+    "tissue_path = os.path.join(s3_path,  'expression data', tissue_name + '.txt.gz')\n",
+    "tissue = pd.read_csv(tissue_path, sep='\\t', storage_options=storage_options)\n",
+    "print('File {} Opened.'.format(tissue_path))"
    ]
   },
   {
@@ -78,8 +85,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract the data as a numpy array\n",
-    "geno_values = genotype.loc[:,'B6D2F1':].values"
+    "# Remove the columns (mouse strains) where there are no measurement:\n",
+    "tissue = tissue.dropna(axis=1)\n",
+    "# Extract the data as a numpy array (drop the first columns)\n",
+    "tissue_values = tissue.iloc[:,2:].values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Normalizing\n",
+    "If unormalized, the graph of gene expression may not account for correlated expressions but only for similar concentration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import normalize\n",
+    "tissue_values = normalize(tissue_values, norm='l2', axis=1)\n",
+    "tissue_values.shape"
    ]
   },
   {
@@ -90,7 +118,7 @@
    "source": [
     "# Default distance is Euclidean\n",
     "num_neighbors = 4\n",
-    "geno_knn = sklearn.neighbors.kneighbors_graph(geno_values, num_neighbors, mode='distance')\n",
+    "tissue_knn = sklearn.neighbors.kneighbors_graph(tissue_values, num_neighbors, mode='distance')\n",
     "# Optionally, one can use the following function to compute all the distances:\n",
     "#geno_distances = sklearn.metrics.pairwise_distances(geno_values)"
    ]
@@ -102,7 +130,7 @@
    "outputs": [],
    "source": [
     "# Distribution of weights\n",
-    "plt.hist(geno_knn.data, bins=20)\n",
+    "plt.hist(tissue_knn.data, bins=50)\n",
     "plt.title('Distribution of distances')\n",
     "plt.xlabel('Distance')\n",
     "plt.ylabel('Nb of edges')\n",
@@ -121,8 +149,8 @@
     "    sigma = 1\n",
     "    return np.exp(- sigma * d)\n",
     "    \n",
-    "M = geno_knn.copy()\n",
-    "M.data = distance2weight(geno_knn.data)\n",
+    "M = tissue_knn.copy() #csr_matrix(tissue_knn.shape)\n",
+    "M.data = distance2weight(tissue_knn.data)\n",
     "\n",
     "print('A distance of 1 becomes a weight of {}.'.format(str(distance2weight(1))))"
    ]
@@ -164,10 +192,8 @@
    "outputs": [],
    "source": [
     "# Adding info on the nodes of the graph\n",
-    "genoinfo_dic = genotype[['SNP','Chr','Pos']].to_dict()\n",
-    "nx.set_node_attributes(G,genoinfo_dic['SNP'],name='SNP') # SNP id\n",
-    "nx.set_node_attributes(G,genoinfo_dic['Chr'],name='Chr') # Chromosome\n",
-    "nx.set_node_attributes(G,genoinfo_dic['Pos'],name='Pos') # position inside the chromosome"
+    "tissueinfo_dic = tissue[['gene']].to_dict()\n",
+    "nx.set_node_attributes(G, tissueinfo_dic['gene'], name='Gene') # gene name"
    ]
   },
   {
@@ -177,16 +203,16 @@
    "outputs": [],
    "source": [
     "# Saving the graph as a gexf file readable with Gephi.\n",
-    "nx.write_gexf(G,'SNPgraph.gexf')"
+    "nx.write_gexf(G,tissue_name + 'graph.gexf')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Graph plotted using Gephi, colored by chromosome. SNPs share their similarity mostly with their spatial neighbors inside chromosomes. Most of the subgraph have a unique color (SNPs from the same chromosome).\n",
+    "Graph plotted using Gephi, colored by community (communities found automatically with Gephi). The gene expression forms two distinct clusters. \n",
     "\n",
-    "![SNP graph](SNPgraphChr.png)"
+    "![gene expression graph](liver_gene_expression.png)"
    ]
   },
   {
@@ -194,14 +220,7 @@
    "metadata": {},
    "source": [
     "## Applications of the graph\n",
-    "There are different possible applications of this graph\n",
-    "\n",
-    "* SNP reduction: reduce the number of SNPs to analyse by grouping similar ones together or keeping only some representatives\n",
-    "    * subsample the SNPs regularly over the graph\n",
-    "    * coarsen the graph in order to merge the most similar SNPs together\n",
-    "* SNP similarity encoding:\n",
-    "    * associate a new feature vector to SNPs accounting for their similarities (node2vec on this graph)\n",
-    "    * use the graph as an input of a GNN"
+    "There are different possible applications of this graph, see the \"genotype graph\" notebook for examples."
    ]
   },
   {
